Add task history, transitions, developer dashboard, and my-tasks features
Introduces task history/transition tracking, a rebuilt developer dashboard,
the my-tasks view, project card stats, and attachment upload-by tracking,
alongside related i18n, routing, and test updates.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>